# mikmbr

./: .gitignore  .gitmodules  .mikmbr.yaml  ASVS_MAPPING.md  CHANGELOG.md  CONFIGURATION.md  CONFIG_FEATURES.md  CONTEXT_LINES.md  DEPENDENCY_SCANNING.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_RENDER.md  EXIT_CODES.md  FRAMEWORK_RULES.md  HOW_IT_WORKS.md  NEW_RULES_V1.2.md  OPTION_4_COMPLETE.md  PYTHON_NOTE.md  README.md  RENAME_COMPLETE.md  ROADMAP.md  SARIF_FORMAT.md  SMART_SECRETS.md  SUPPRESSION.md  TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md  TRANSPARENCY_FEATURES.md  V1.5_NEW_RULES.md  VERBOSE_MODE.md  WEBSITE.md  demo.py  demo_all_rules.py  demo_config.py  demo_smart_secrets.py  demo_verbose.py  generate_transparency_report.py  pyproject.toml  run_tests.bat  test_deps_vulnerable.txt  test_secret.py  test_v17.bat  (+4 more)
.claude/: CLEANUP_SUMMARY.md  FINAL_CLEANUP.md  PROJECT_CONTEXT.md  PYTHON_SETUP_AND_FIXES.md  V17_COMPLETE.md  V17_FINAL_CHECKLIST.md  V17_IMPLEMENTATION.md  V17_TESTS_AND_VALIDATION.md  settings.local.json
.github/workflows/: ci.yml
examples/: .mikmbr.yaml  framework_vulnerabilities.py  new_rules_demo.py  scan_results.json  secrets_demo.py  showcase_examples.py
src/mikmbr/: __init__.py  __main__.py  cli.py  config.py  (+3 more)
tests/: __init__.py  test_config.py  test_context_lines.py  test_dependency_scanning.py  test_exit_codes.py  test_new_rules.py  test_rule_matrix.py  test_rules.py  test_scanner.py  test_smart_secrets.py  test_suppression.py  test_verbose.py
website/: docs.html  index.html  run-local.bat  script.js  showcase.html  style.css  transparency.html
(+41 files in other folders)
